NavBar Collapsed Design Fixed and Its Login Button Design Fixed

--- a/src/assets/css/NavBar.css
+++ b/src/assets/css/NavBar.css
@@ -17,33 +17,52 @@
 .logo {
     letter-spacing: 0.21em !important;
 }
+@media only screen and (max-width: 820px) {
+    .not_active {
+        text-decoration: none;
+        color: #5ACE7F !important;;
+        text-transform: uppercase;
+        font-size: small;
+        font-weight: 300;
+    }
+    
+    .active {
+        text-decoration: none;
+        color: #5ACE7F !important;
+        text-transform: uppercase;
+        font-size: small;
+        font-weight: 900;
+    }
 
+    .NavBar_btn {
+        border: 1px solid white;
+        background-color: #5ACE7F;
+        border-radius: 3px;
+        padding: 5px 20px 5px 20px ;
+        color: white !important;
+        text-transform: uppercase;
+        font-weight: 300;
+        font-size: small;
+        text-decoration: none;
+    }
+  }
 .NavBar_btn {
     border: 1px solid white;
     background-color: #5ACE7F;
     border-radius: 3px;
     padding: 5px 20px 5px 20px ;
-    color: white;
-    font-weight: 500;
+    color: white !important;
+    text-transform: uppercase;
+    font-weight: 300;
     text-decoration: none;
 }
 
 .NavBar_btn:hover {
-    border-color: #ffffff;
+    border: 1px solid white;
     background-color: white;
     border-radius: 3px;
     padding: 5px 20px 5px 20px ;
-    color: #5ACE7F;
-    font-weight: 500;
-    text-decoration: none;
-}
-
-.NavBar_btn_active{
-    border-color: #ffffff;
-    background-color: white;
-    border-radius: 3px;
-    padding: 5px 20px 5px 20px ;
-    color: #5ACE7F;
+    color: #5ACE7F !important;
     font-weight: 500;
     text-decoration: none;
 }
